--- a/languages.apacheconf/src/org/netbeans/modules/languages/apacheconf/resources/ApacheConfResolver.xml
+++ b/languages.apacheconf/src/org/netbeans/modules/languages/apacheconf/resources/ApacheConfResolver.xml
@@ -41,6 +41,11 @@ Contributor(s):
 <!DOCTYPE MIME-resolver PUBLIC "-//NetBeans//DTD MIME Resolver 1.0//EN" "http://www.netbeans.org/dtds/mime-resolver-1_1.dtd">
 <MIME-resolver>
     <file>
+        <!-- #267416 -->
+        <name name="jstestdriver" substring="true"/>
+        <exit/>
+    </file>
+    <file>
         <name name=".htaccess" />
         <resolver mime="text/x-apache-conf"/>
     </file>
